--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
 					<header>
 						<h2>Quienes somos</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>Somos una fundación sin ánimo de lucro, dispuesta a trabajar de la mano con la comunidad y con algunas entidades que quieran ayudarnos, ya sea a  obtener fondos para compara kits escolares o bien sea  recibir de los mismos donaciones como tal ,para llevarles a los niños con el fin de motivarlos a ir a clases y ayudar a erradicar la deserción escolar por falta de útiles escolares.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -61,9 +59,7 @@
 				<div class="content">
 					<header>
 						<h2>Nuestro Impacto</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<p>Hemos visitado 10 municipios en el Magdalena,donde hemos llevado kits escolares a 18 colegios de escuelas públicas más vulnerables, beneficiando a más de 8000 niños en 10 años de servicio a la comunidad.</p>
 					</header>
 
 					<!-- Gallery  -->
@@ -114,10 +110,10 @@
 			<section id="contacto" class="main style3 secondary">
 				<div class="content">
 					<header>
-						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<h2>Contacto</h2>
+						<p>Escríbenos a <a href="mailto:contacto@angelesguerrerosdedios.co">contacto@angelesguerrerosdedios.co</a></p>
 					</header>
-					<div class="box">
+					<!-- <div class="box">
 						<form method="post" action="#">
 							<div class="fields">
 								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
@@ -128,7 +124,7 @@
 								<li><input type="submit" value="Send Message" /></li>
 							</ul>
 						</form>
-					</div>
+					</div> -->
 				</div>
 			</section>
 
