--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<header>
 						<h2>Quienes somos</h2>
 					</header>
-					<p>Somos una fundación sin ánimo de lucro, dispuesta a trabajar de la mano con la comunidad y con algunas entidades que quieran ayudarnos, ya sea a  obtener fondos para compara kits escolares o bien sea  recibir de los mismos donaciones como tal ,para llevarles a los niños con el fin de motivarlos a ir a clases y ayudar a erradicar la deserción escolar por falta de útiles escolares.</p>
+					<p>Somos una fundación sin ánimo de lucro, dispuesta a trabajar de la mano con la comunidad y con algunas entidades que quieran ayudarnos, ya sea a obtener fondos para comprar kits escolares o bien sea  recibir de los mismos donaciones como tal ,para llevarles a los niños con el fin de motivarlos a ir a clases y ayudar a erradicar la deserción escolar por falta de útiles escolares.</p>
 				</div>
 				<a href="#nuestro-impacto" class="button style2 down anchored">Next</a>
 			</section>
