improved menu donate button design and added donate button in the index page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<ul>
 						<li><a href="#intro">Inicio</a></li>
 						<li><a href="#permanencia-rte">Permanencia RTE</a></li>
-						<li><a href="https://vaki.co/es/vaki/angeles-guerreros-kits-escolares#patrocinios" target="_blank">Dona aquí</a></li>
+						<li><a href="https://vaki.co/es/vaki/angeles-guerreros-kits-escolares#patrocinios" target="_blank" class="donate_button">Dona aquí <span style="color: #6bb8d1 !important;">&#x2665;</span></a></li>
 						<li><a href="#quienes-somos">Quienes somos</a></li>
 						<li><a href="#nuestro-impacto">Nuestro impacto</a></li>
 						<li><a href="#contacto">Contacto</a></li>
@@ -38,7 +38,8 @@
 						<h1 style="font-size: 55px;">Fundación Ángeles Guerreros de Dios</h1> 
 					<br>
 					<p>Trabajamos por el futuro de las nuevas generaciones entregando kits escolares para niños vulnerables de escuelas públicas del Magdalena, en Colombia.</p>
-										<footer>
+					<a href="https://vaki.co/es/vaki/angeles-guerreros-kits-escolares#patrocinios" target="_blank" class="button style1" style="font-weight: bold; background-color: #6bb8d1;">Haz tu aporte aquí</a>				
+					<footer>
 						<a href="#permanencia-rte" class="button style2 down">More</a>
 					</footer>
 				</div>
