--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 				<div class="content">
 					<header>
 						<h2>Contacto</h2>
-						<p>Escríbenos a <a href="mailto:contacto@angelesguerrerosdedios.co">contacto@angelesguerrerosdedios.co</a></p>
+						<p>Escríbenos a <a href="mailto:contacto@angelesguerrerosdedios.org">contacto@angelesguerrerosdedios.org</a></p>
 					</header>
 					<!-- <div class="box">
 						<form method="post" action="#">
