--- a/donate.html
+++ b/donate.html
@@ -41,9 +41,9 @@
             <p>Your generous donations help us to continue our mission and reach more people in need. Every contribution, no matter how small, makes a difference.</p>
         </header>
         <p>To make a donation, please send an email to <strong>contacto@angelesguerrerosdedios.org</strong> with your country and donation details. We will provide you with the necessary information on how to donate in your territory.</p>
-        <article class="from-left" style="width:100%;">
-            <a href="mailto:contacto@angelesguerrerosdedios.org" class="style2 button" style="font-size: 1.2em;">Email Us to Donate</a>
-        </article>
+  
+            <a href="mailto:contacto@angelesguerrerosdedios.org" target="_blank" class="button style1" style="font-weight: bold; background-color: #6bb8d1;">Email Us to Donate</a>
+  
     </div>
 </section>
 
