--- a/donate.html
+++ b/donate.html
@@ -42,7 +42,7 @@
         </header>
         <p>To make a donation, please send an email to <strong>contacto@angelesguerrerosdedios.org</strong> with your country and donation details. We will provide you with the necessary information on how to donate in your territory.</p>
   
-            <a href="mailto:contacto@angelesguerrerosdedios.org" target="_blank" class="button style1" style="font-weight: bold; background-color: #6bb8d1;">Email Us to Donate</a>
+            <a href="mailto:contacto@angelesguerrerosdedios.org" class="button style1" style="font-weight: bold; background-color: #6bb8d1;">Email Us to Donate</a>
   
     </div>
 </section>
