--- a/donate.html
+++ b/donate.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="assets/css/main.css" />
         <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     </head>
-    	<!-- Google tag (gtag.js) -->
+        	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CTZR2Z89YD"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -23,17 +23,15 @@
             <h1><img class="logo-angeles" src="images/logo-angeles-guerreros-de-Dios.png"/> Ángeles Guerreros de Dios</h1>
             <nav>
                 <ul>
-                    <li><a href="#intro">Inicio</a></li>
-                    <li><a href="#permanencia-rte">Permanencia RTE</a></li>
-                    <li><a href="https://vaki.co/es/vaki/angeles-guerreros-kits-escolares#patrocinios" target="_blank">Dona aquí</a></li>
-                    <li><a href="#quienes-somos">Quienes somos</a></li>
-                    <li><a href="#nuestro-impacto">Nuestro impacto</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="#intro">Home</a></li>
+                    <li><a href="#quienes-somos">Who we are</a></li>
+                    <li><a href="#nuestro-impacto">Our impact</a></li>
+                    <li><a href="#contacto">Contact</a></li>
                 </ul>
             </nav>
         </header>
 
- <!-- Main -->
+      <!-- Main -->
  <section id="intro" class="main style1 dark fullscreen">
     <div class="content">
         <header>
@@ -47,11 +45,48 @@
     </div>
 </section>
 
+        <!-- Who We Are -->
+        <section id="quienes-somos" class="main style2 left dark fullscreen">
+            <div class="content box style2">
+                <header>
+                    <h2>Who We Are</h2>
+                </header>
+                <p>We are a non-profit foundation, willing to work hand in hand with the community and with some entities that want to help us, either to obtain funds to buy school kits or to receive donations from them as such, to take to the children. in order to motivate them to go to classes and help eradicate school dropouts due to lack of school supplies.</p>
+            </div>
+            <a href="#nuestro-impacto" class="button style2 down anchored">Next</a>
+        </section>
+
+        <!-- Our Impact -->
+        <section id="nuestro-impacto" class="main style3 primary">
+            <div class="content">
+                <header>
+                    <h2>Our Impact</h2>
+                    <p>We have visited 10 municipalities in Magdalena, where we have taken school kits to 18 most vulnerable public schools, benefiting more than 8,000 children in 10 years of service to the community.</p>
+                </header>
+                <!-- Gallery  -->
+						<div class="gallery">
+							<article class="from-left" style="width: 100%;">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/cJo0sSsr4wg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							</article>
+						</div>
+            </div>
+        </section>
+
+        <!-- Contact -->
+        <section id="contacto" class="main style3 secondary">
+            <div class="content">
+                <header>
+                    <h2>Contact Us</h2>
+                    <p>If you have any questions or would like to get involved, please don't hesitate to contact us to this email adress: <a href="mailto:contacto@angelesguerrerosdedios.org">contacto@angelesguerrerosdedios.org</a></p>
+                </header>
+              
+            </div>
+        </section>
 
         <!-- Footer -->
         <footer id="footer">
             <ul class="menu">
-                <li>&copy; Ángeles Guerreros de Dios 2023</li><li>Todos los derechos reservados.</li>
+                <li>&copy; Ángeles Guerreros de Dios 2025</li><li>All rights reserved.</li>
             </ul>
         </footer>
 
